[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/flappyfont.tres" type="DynamicFont" id=3]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartScreen" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -277.0
margin_right = 138.0
margin_bottom = 123.0
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -224.0
margin_right = 133.0
margin_bottom = -11.0
custom_constants/separation = 15

[node name="RunScore" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 266.0
margin_bottom = 49.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 3 )
text = "SCORE: 0"
align = 1

[node name="HighScore" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 64.0
margin_right = 266.0
margin_bottom = 113.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 3 )
text = "BEST: 0"
align = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 128.0
margin_right = 266.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 3 )
text = "RESTART"

[node name="UserChoice" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="UserChoice"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.0
margin_top = -193.0
margin_right = 198.0
margin_bottom = -110.0
custom_constants/separation = 20

[node name="Play" type="Button" parent="UserChoice/HBoxContainer"]
margin_right = 175.0
margin_bottom = 83.0
rect_min_size = Vector2( 175, 75 )
custom_fonts/font = ExtResource( 3 )
text = "PLAY"

[node name="AI" type="Button" parent="UserChoice/HBoxContainer"]
margin_left = 195.0
margin_right = 370.0
margin_bottom = 83.0
rect_min_size = Vector2( 175, 75 )
custom_fonts/font = ExtResource( 3 )
text = "AI"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UserChoice/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="UserChoice/HBoxContainer/AI" to="." method="_on_AI_pressed"]
